# graceful-fail

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  STATUS.md  demo-plan.md  nixpacks.toml  package.json  plan-pivot.md  pnpm-lock.yaml  railway.toml  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts  warroom.js
.claude/: launch.json
client/: index.html
content/: crewai-tutorial.md  devto-article.md  directory-submissions.md  graceful-fail.postman_collection.json  langchain-tutorial.md  launch-copy.md  postman-README.md
drizzle/: 0001_unusual_darwin.sql  0002_numerous_lester.sql  0003_true_juggernaut.sql  0004_third_serpent_society.sql  0005_dazzling_doctor_spectrum.sql  0006_left_gwen_stacy.sql  schema.ts
github-action/: README.md  action.yml  package.json
n8n-node/: .npmignore  README.md  gulpfile.js  package.json  tsconfig.json
npm/: CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  selfheal-proxy-test-report-2026-03-30.md
python/graceful_fail/: __init__.py  client.py  exceptions.py  langchain.py  models.py  patch.py
python/tests/: test_client.py
scripts/: compliance-curl.ts  compliance-demo.ts  gmail-drafts.ts  outreach.ts  seed-demo.sh  test-x402-heal.mjs
server/: db.ts  extensions.test.ts  features.test.ts  gracefulFail.test.ts  llmAnalysis.ts  llmTaxRouter.ts  monitoring.ts  normalizeEngine.ts  openApiSpec.ts  proxyEngine.ts  referralRouter.ts  responseCache.ts  rouletteRouter.ts  routers.ts  scanEngine.ts  schemaCache.ts  sentryRouter.ts  sentryWebhook.ts  slackAlert.ts  slackRouter.ts  stripeProducts.ts  stripeRouter.ts  threatShield.ts  webhookEngine.ts  webhookRouter.ts  x402.ts  x402Proxy.ts  (+1 more)
(+93 files in other folders)
